# qr-code-generator-api-388c118b7-3237-4fed-855e-d55da3bc6624

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: api_key_access_service.py  authenticate_user_service.py  generate_qr_code_service.py  server.py
